started switching ThermostatAPI.ipynb to pydantic

--- a/shared_data/Thermostat/ThermostatAPI.ipynb
+++ b/shared_data/Thermostat/ThermostatAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,40 +11,31 @@
     "from fastapi import FastAPI, Depends\n",
     "import uvicorn\n",
     "import nest_asyncio\n",
+    "from pydantic import BaseModel, AnyUrl, Field\n",
     "\n",
     "app = FastAPI()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "execution_count": 97,
    "outputs": [],
    "source": [
-    "# Defining the thermostat class\n",
-    "class Thermostat:\n",
-    "    def __init__(self,\n",
-    "                 name: str,\n",
-    "                 temperature: int,\n",
-    "                 humidity: int,\n",
-    "                 mode: str,\n",
-    "                 kb_id: str,\n",
-    "                 ):\n",
-    "        self.name = name\n",
-    "        self.temperature = temperature\n",
-    "        self.humidity = humidity\n",
-    "        self.mode = mode\n",
-    "        self.kb_id = kb_id\n"
-   ]
+    "class Thermostat(BaseModel):\n",
+    "    name: str\n",
+    "    desired_temperature: int\n",
+    "    actual_temperature: int #| None = Field(...)\n",
+    "    humidity: int\n",
+    "    mode: str\n",
+    "    kb_id: AnyUrl\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -55,16 +46,17 @@
    "source": [
     "# Creating a thermostat object\n",
     "thermostat = Thermostat(name=\"Thermostat\",\n",
-    "                        temperature=20,\n",
+    "                        desired_temperature=20,\n",
+    "                        actual_temperature=18,\n",
     "                        humidity=50,\n",
-    "                        mode=\"cool\",\n",
+    "                        mode=\"heat\",\n",
     "                        kb_id=\"http://127.0.0.1:8000/thermostat\",\n",
     "                        )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 100,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -74,20 +66,20 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "{'name': 'Thermostat',\n 'temperature': 20,\n 'humidity': 50,\n 'mode': 'cool',\n 'kb_id': 'http://127.0.0.1:8000/thermostat'}"
+      "text/plain": "{'name': 'Thermostat',\n 'desired_temperature': 20,\n 'actual_temperature': 18,\n 'humidity': 50,\n 'mode': 'heat',\n 'kb_id': AnyUrl('http://127.0.0.1:8000/thermostat', scheme='http', host='127.0.0.1', host_type='ipv4', port='8000', path='/thermostat')}"
      },
-     "execution_count": 12,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "thermostat.__dict__"
+    "thermostat.dict()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 101,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -103,8 +95,8 @@
     "\n",
     "\n",
     "@app.get(\"/thermostat\")\n",
-    "async def get_thermostat():\n",
-    "    return thermostat.__dict__\n",
+    "async def get_thermostat() -> Thermostat:\n",
+    "    return thermostat\n",
     "\n",
     "\n",
     "@app.get(\"/thermostat/name\")\n",
@@ -112,9 +104,14 @@
     "    return thermostat.name\n",
     "\n",
     "\n",
-    "@app.get(\"/thermostat/temperature\")\n",
-    "async def get_temperature():\n",
-    "    return thermostat.temperature\n",
+    "@app.get(\"/thermostat/actual_temperature\")\n",
+    "async def get_actual_temperature() -> int:\n",
+    "    return thermostat.desired_temperature\n",
+    "\n",
+    "\n",
+    "@app.get(\"/thermostat/desired_temperature\")\n",
+    "async def get_desired_temperature() -> int:\n",
+    "    return thermostat.desired_temperature\n",
     "\n",
     "\n",
     "@app.get(\"/thermostat/humidity\")\n",
@@ -133,20 +130,15 @@
     "\n",
     "\n",
     "@app.put(\"/thermostat\")\n",
-    "async def set_thermostat(commons: Thermostat = Depends()):\n",
-    "    thermostat.name = commons.name\n",
-    "    thermostat.temperature = commons.temperature\n",
-    "    thermostat.humidity = commons.humidity\n",
-    "    thermostat.mode = commons.mode\n",
-    "    thermostat.kb_id = commons.kb_id\n",
-    "\n",
-    "    return thermostat.__dict__\n",
+    "async def set_thermostat(commons: Thermostat = Depends()) -> Thermostat:\n",
+    "    thermostat.__dict__.update(commons.__dict__)\n",
+    "    return thermostat\n",
     "\n",
     "\n",
-    "@app.put(\"/thermostat/temperature\")\n",
-    "async def set_temperature(temperature: int):\n",
-    "    thermostat.temperature = temperature\n",
-    "    return thermostat.temperature\n",
+    "@app.put(\"/thermostat/desired_temperature\")\n",
+    "async def set_desired_temperature(desired_temperature: int) -> int:\n",
+    "    thermostat.desired_temperature = desired_temperature\n",
+    "    return thermostat.desired_temperature\n",
     "\n",
     "\n",
     "@app.put(\"/thermostat/humidity\")\n",
@@ -385,23 +377,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [
-    "'''?meas rdf:type saref:Measurement .\n",
-    "                            ?meas saref:hasValue ?temp .\n",
-    "                            ?meas saref:isMeasuredIn saref:TemperatureUnit .\n",
-    "                            ?meas saref:hasTimestamp ?timestamp .\n",
-    "                            ?meas saref:isMeasurementOf ?room_id .\n",
-    "                            ?meas saref:relatesToProperty saref:Temperature .\n",
-    "                            ?meas saref:measurementMadeBy ?device_id .'''"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -426,9 +401,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:35722 - \"GET / HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:56016 - \"GET /docs HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:56016 - \"GET /openapi.json HTTP/1.1\" 200 OK\n"
+      "INFO:     127.0.0.1:38152 - \"GET /docs HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:38152 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:46360 - \"GET /thermostat HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:38426 - \"PUT /thermostat?name=boiii&desired_temperature=23&actual_temperature=20&humidity=88&mode=heat&kb_id=http%3A%2F%2F127.0.0.1%3A8000%2Fdocs%23%2Fdefault%2Fset_thermostat_thermostat_put HTTP/1.1\" 200 OK\n"
      ]
     }
    ],
