small changes to  thermostat model

--- a/shared_data/Thermostat/ThermostatAPI.ipynb
+++ b/shared_data/Thermostat/ThermostatAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,22 +11,22 @@
     "from fastapi import FastAPI, Depends\n",
     "import uvicorn\n",
     "import nest_asyncio\n",
-    "from pydantic import BaseModel, AnyUrl, Field\n",
+    "from pydantic import BaseModel, AnyUrl\n",
     "\n",
     "app = FastAPI()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 124,
    "outputs": [],
    "source": [
     "class Thermostat(BaseModel):\n",
     "    name: str\n",
-    "    desired_temperature: int\n",
-    "    actual_temperature: int #| None = Field(...)\n",
-    "    humidity: int\n",
-    "    mode: str\n",
+    "    desired_temperature: int = 0\n",
+    "    actual_temperature: int = 0\n",
+    "    humidity: int = 0\n",
+    "    mode: str = \"heat\"\n",
     "    kb_id: AnyUrl\n"
    ],
    "metadata": {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 125,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -47,16 +47,16 @@
     "# Creating a thermostat object\n",
     "thermostat = Thermostat(name=\"Thermostat\",\n",
     "                        desired_temperature=20,\n",
-    "                        actual_temperature=18,\n",
+    "                        #actual_temperature=18,\n",
     "                        humidity=50,\n",
     "                        mode=\"heat\",\n",
-    "                        kb_id=\"http://127.0.0.1:8000/thermostat\",\n",
+    "                         kb_id=\"http://127.0.0.1:8000/thermostat\",\n",
     "                        )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 126,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -66,9 +66,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "{'name': 'Thermostat',\n 'desired_temperature': 20,\n 'actual_temperature': 18,\n 'humidity': 50,\n 'mode': 'heat',\n 'kb_id': AnyUrl('http://127.0.0.1:8000/thermostat', scheme='http', host='127.0.0.1', host_type='ipv4', port='8000', path='/thermostat')}"
+      "text/plain": "{'name': 'Thermostat',\n 'desired_temperature': 20,\n 'actual_temperature': 0,\n 'humidity': 50,\n 'mode': 'heat',\n 'kb_id': AnyUrl('http://127.0.0.1:8000/thermostat', scheme='http', host='127.0.0.1', host_type='ipv4', port='8000', path='/thermostat')}"
      },
-     "execution_count": 100,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 127,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -376,14 +376,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    },
-    "pycharm": {
-     "is_executing": true
     }
    },
    "outputs": [
@@ -401,10 +398,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:38152 - \"GET /docs HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:38152 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:46360 - \"GET /thermostat HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:38426 - \"PUT /thermostat?name=boiii&desired_temperature=23&actual_temperature=20&humidity=88&mode=heat&kb_id=http%3A%2F%2F127.0.0.1%3A8000%2Fdocs%23%2Fdefault%2Fset_thermostat_thermostat_put HTTP/1.1\" 200 OK\n"
+      "INFO:     127.0.0.1:34260 - \"GET /docs HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:34260 - \"GET /openapi.json HTTP/1.1\" 200 OK\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Shutting down\n",
+      "INFO:     Waiting for application shutdown.\n",
+      "INFO:     Application shutdown complete.\n",
+      "INFO:     Finished server process [12495]\n"
      ]
     }
    ],
